# nanopublishing

./: .gitignore  .gitmodules  404.html  AGENTS.md  README.md  hooks.py  index.html  jeeves.py  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
context/: index.html
docs/: .pages  index.md
docs/context/: index.md
docs/examples/: .pages
docs/examples/odyssey-2001/europa-is-a-satellite-of-jupiter/: index.md
docs/examples/types-of-ssds/: .pages
docs/examples/types-of-ssds/interface-to-form-factor-mapping/: index.md
docs/examples/types-of-ssds/m2-keying-scheme/: index.md
docs/examples/visualizations/: .pages  alpha-centauri.md  rdf.md
examples/odyssey-2001/europa-is-a-satellite-of-jupiter/: index.html
examples/visualizations/rdf/: index.html
publications/types-of-ssds/: index.md
publications/types-of-ssds/form-factor-scheme/: index.md
publications/types-of-ssds/interface-scheme/: index.md
search/: search_index.json
skills/create-knowledge-graph/: SKILL.md
skills/find-url-for/: SKILL.md
skills/nanopublish/: SKILL.md  jeeves.py  pyproject.toml
skills/semantify/: SKILL.md  rules.md  validator-prompt.md  writer-prompt.md
skills/validate-knowledge-graph/: SKILL.md
